--- a/src/main/webapp/views/book-list.html
+++ b/src/main/webapp/views/book-list.html
@@ -7,7 +7,7 @@
 	    <section class="pull-right">
 	        <button class="btn btn-info" ng-click="sort = 'releaseYear'; reverse = !reverse">Sort by year</button>
 	        <button class="btn btn-info" ng-click="sort = 'title'; reverse = !reverse">Sort by title</button>
-	        <button class="btn btn-info" ng-show="isManager" ng-click="gotoNewBookPage()">Add a book</button>
+	        <button id="button-add" class="btn btn-info" ng-show="isManager" ng-click="gotoNewBookPage()">Add a book</button>
 	    </section>
     </section>
 
