--- a/src/main/webapp/views/todo-list.html
+++ b/src/main/webapp/views/todo-list.html
@@ -2,7 +2,7 @@
 
     <div class="row">
             <h2>Liste des todos</h2>
-            <dic ng-click="gotoTodoNewPage()" class="btn btn-lg btn-primary">Ajouter</button>
+            <button id="button-add" ng-click="gotoTodoNewPage()" class="btn btn-lg btn-primary">Ajouter</button>
     </div>
     <div class="row">
 
